cmake_minimum_required(VERSION 3.16)
project(skTorrent LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Основная библиотека (код торрента)
add_subdirectory(skTorrent)
add_subdirectory(Launcher)
# Тесты (подключаются только если включено)
option(BUILD_TESTS "Build tests" ON)
if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(Test)
endif()
